# GameEngineAMQP

./: .gitignore  CMakeLists.txt  README.md
cmake/: amqpcpp.cmake  azcore.cmake  boost.cmake  cityhash.cmake  cmake_install.cmake  example_app.cmake  googletest.cmake  group_files.cmake  log.cmake  log4cpp.cmake  logging-log4cxx.cmake  lua.cmake  messages_system.cmake  openssl.cmake  qpid-proton.cmake  rabbitmq.cmake  rapidjson.cmake  rapidxml.cmake  zstd.cmake
engine/: CMakeLists.txt
engine/log/: CMakeLists.txt
engine/log/src/: Log.cpp  Log.h  LogSingleton.h
engine/messages_system/: CMakeLists.txt
engine/messages_system/src/: IConsumer.h  IExchange.h  IMsgSystem.h  IProducer.h  MsgSysLog.h  MsgSystemCreator.cpp  MsgSystemCreator.h
engine/messages_system/src/proton/: ProtonConsumer.cpp  ProtonConsumer.h  ProtonExchange.cpp  ProtonExchange.h  ProtonExchangeConnHandler.cpp  ProtonExchangeConnHandler.h  ProtonMsgListener.cpp  ProtonMsgListener.h  ProtonMsgSystem.cpp  ProtonMsgSystem.h  ProtonProducer.cpp  ProtonProducer.h
engine/messages_system/src/proton/ExchangeImpl/: ProtonExchangeConnHandler.cpp  ProtonExchangeConnHandler.h  ProtonExchangeListener.cpp  ProtonExchangeListener.h  ProtonExchangeQueue.cpp  ProtonExchangeQueue.h  ProtonExchangeQueueManager.cpp  ProtonExchangeQueueManager.h  ProtonExchangeReceiver.cpp  ProtonExchangeReceiver.h  ProtonExchangeSender.cpp  ProtonExchangeSender.h
examples/: CMakeLists.txt
examples/azcore_ecs/: CMakeLists.txt
examples/azcore_ecs/src/: TestBus.h  TestComponent.h  TestModule.h  main.cpp
examples/broker_consumer/: CMakeLists.txt
examples/broker_consumer/src/: main.cpp
examples/broker_exchange/: CMakeLists.txt
examples/broker_exchange/src/: main.cpp
examples/broker_producer/: CMakeLists.txt
examples/broker_producer/src/: main.cpp
examples/client/: CMakeLists.txt
examples/client/src/: main.cpp
examples/hello_world_amqpcpp/: CMakeLists.txt
examples/hello_world_amqpcpp/src/: main.cpp
examples/hello_world_qpid-proton/: CMakeLists.txt
examples/hello_world_qpid-proton/src/: main.cpp
examples/hello_world_rabbitmq/: CMakeLists.txt
examples/hello_world_rabbitmq/src/: main.cpp
examples/peer-to-peer/: CMakeLists.txt
examples/peer-to-peer-client/: CMakeLists.txt
examples/peer-to-peer-client/src/: main.cpp
examples/peer-to-peer-server/: CMakeLists.txt
examples/peer-to-peer-server/src/: main.cpp
examples/peer-to-peer/src/: main.cpp
examples/server/: CMakeLists.txt
examples/server/src/: main.cpp
examples/simple/: CMakeLists.txt
examples/simple/src/: main.cpp
examples/simple_broker/: CMakeLists.txt
examples/simple_broker/src/: main.cpp
make/: make_3rdparty_libs.sh
tests/: README.md  test_message_system.py
