cmake_minimum_required(VERSION 3.10)

add_subdirectory (hello_world_amqpcpp)
add_subdirectory (hello_world_qpid-proton)
add_subdirectory (hello_world_rabbitmq)
add_subdirectory (simple_broker)
add_subdirectory (broker_exchange)
add_subdirectory (broker_consumer)
add_subdirectory (broker_producer)
add_subdirectory (peer-to-peer)
add_subdirectory (peer-to-peer-server)
add_subdirectory (peer-to-peer-client)
add_subdirectory (azcore_ecs)
add_subdirectory (socket-server)